[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/Levels/World.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/background_1.png" type="Texture" id=2]
[ext_resource path="res://Music/xDeviruchi - 8-bit Fantasy  & Adventure Music (2021)/xDeviruchi - Take some rest and eat some food!.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Other/TransitionEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Other/BlackScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Other/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Music/xDeviruchi - 8-bit Fantasy  & Adventure Music (2021)/xDeviruchi - Exploring The Unknown.wav" type="AudioStream" id=7]
[ext_resource path="res://Music/xDeviruchi - 8-bit Fantasy  & Adventure Music (2021)/xDeviruchi - And The Journey Begins .wav" type="AudioStream" id=8]
[ext_resource path="res://Music/xDeviruchi - 8-bit Fantasy  & Adventure Music (2021)/xDeviruchi - Prepare for Battle! .wav" type="AudioStream" id=9]
[ext_resource path="res://Music/Mole/mole_death.wav" type="AudioStream" id=10]
[ext_resource path="res://Music/Random/no_money.wav" type="AudioStream" id=11]
[ext_resource path="res://Music/Random/button_hover_1.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/HelpMenu/back_button_v2.png" type="Texture" id=13]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation1.png" type="Texture" id=14]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation7.png" type="Texture" id=15]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation6.png" type="Texture" id=16]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation5.png" type="Texture" id=17]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation9.png" type="Texture" id=18]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation4.png" type="Texture" id=19]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation2.png" type="Texture" id=20]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation3.png" type="Texture" id=21]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation8.png" type="Texture" id=22]
[ext_resource path="res://Assets/MainMenuStuff/help_button_1.png" type="Texture" id=23]
[ext_resource path="res://Assets/MainMenuStuff/quit_button_1.png" type="Texture" id=24]
[ext_resource path="res://Assets/HelpMenu/help_menu_1.png" type="Texture" id=25]
[ext_resource path="res://Assets/HelpMenu/next_page_button_hover.png" type="Texture" id=26]
[ext_resource path="res://Assets/HelpMenu/back_button_v2_hover (1).png" type="Texture" id=27]
[ext_resource path="res://Assets/HelpMenu/help_menu_2.png" type="Texture" id=28]
[ext_resource path="res://Assets/HelpMenu/help_menu.png" type="Texture" id=29]
[ext_resource path="res://Assets/HelpMenu/next_page_button.png" type="Texture" id=30]
[ext_resource path="res://Assets/MobileControlls/pause_button1.png" type="Texture" id=31]
[ext_resource path="res://Assets/MobileControlls/pause_button2.png" type="Texture" id=32]
[ext_resource path="res://Assets/HelpMenu/next_page_button_cum.png" type="Texture" id=33]
[ext_resource path="res://Assets/HelpMenu/next_page_button_hover_cum.png" type="Texture" id=34]
[ext_resource path="res://Assets/MainMenuStuff/back_button_hover (1).png" type="Texture" id=35]
[ext_resource path="res://Assets/HelpMenu/back_button (1).png" type="Texture" id=36]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "an1",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "an2",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="World" type="Node2D"]
pause_mode = 1
z_index = -10
script = ExtResource( 1 )

[node name="Kanvas" type="CanvasLayer" parent="."]
pause_mode = 1
layer = 2

[node name="UI" parent="Kanvas" instance=ExtResource( 6 )]

[node name="PauseButton" type="TouchScreenButton" parent="Kanvas"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 1464, 28 )
scale = Vector2( 8, 8 )
normal = ExtResource( 31 )
pressed = ExtResource( 32 )

[node name="Resume" type="TouchScreenButton" parent="Kanvas"]
pause_mode = 2
visible = false
position = Vector2( 782, 331 )
scale = Vector2( 6.6, 6.6 )
z_index = 1
normal = ExtResource( 36 )
pressed = ExtResource( 35 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Kanvas"]
pause_mode = 2
visible = false
position = Vector2( 960, 450 )
scale = Vector2( 6.6, 6.6 )
frames = SubResource( 3 )
frame = 8
playing = true

[node name="Help" type="TouchScreenButton" parent="Kanvas"]
pause_mode = 2
visible = false
position = Vector2( 782.2, 568.75 )
scale = Vector2( 6.6, 6.6 )
z_index = 1
normal = ExtResource( 23 )

[node name="Quit" type="TouchScreenButton" parent="Kanvas"]
pause_mode = 2
visible = false
position = Vector2( 782, 733.795 )
scale = Vector2( 6.6, 6.6 )
z_index = 1
normal = ExtResource( 24 )

[node name="Left" type="TouchScreenButton" parent="Kanvas"]
pause_mode = 2
visible = false
position = Vector2( 1125, 640 )
scale = Vector2( 6.6, 6.6 )
z_index = 1
normal = ExtResource( 30 )
pressed = ExtResource( 26 )

[node name="Right" type="TouchScreenButton" parent="Kanvas"]
pause_mode = 2
visible = false
position = Vector2( 1312, 640 )
scale = Vector2( 6.6, 6.6 )
z_index = 1
normal = ExtResource( 33 )
pressed = ExtResource( 34 )

[node name="Back" type="TouchScreenButton" parent="Kanvas"]
pause_mode = 2
visible = false
position = Vector2( 1128, 768 )
scale = Vector2( 6.6, 6.6 )
z_index = 1
normal = ExtResource( 13 )
pressed = ExtResource( 27 )

[node name="HelpMenuStuff" type="Node2D" parent="Kanvas"]
visible = false
position = Vector2( 960, 452 )
scale = Vector2( 6.6, 6.6 )

[node name="HelpMenu" type="Sprite" parent="Kanvas/HelpMenuStuff"]
texture = ExtResource( 29 )

[node name="Controls" type="AnimatedSprite" parent="Kanvas/HelpMenuStuff"]
position = Vector2( -26.5, 15 )
frames = SubResource( 4 )
animation = "an2"

[node name="BlackScreen2" parent="." instance=ExtResource( 5 )]
position = Vector2( 24, 56 )

[node name="TransitionEffect" parent="." instance=ExtResource( 4 )]

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 160, 160 )
z_index = -11
texture = ExtResource( 2 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 543, 160 )
z_index = -11
texture = ExtResource( 2 )

[node name="Background3" type="Sprite" parent="."]
position = Vector2( 926, 160 )
z_index = -11
texture = ExtResource( 2 )

[node name="Background4" type="Sprite" parent="."]
position = Vector2( 160, 544 )
z_index = -11
texture = ExtResource( 2 )

[node name="Background5" type="Sprite" parent="."]
position = Vector2( 543, 544 )
z_index = -11
texture = ExtResource( 2 )

[node name="Background6" type="Sprite" parent="."]
position = Vector2( 926, 544 )
z_index = -11
texture = ExtResource( 2 )

[node name="Background7" type="Sprite" parent="."]
position = Vector2( 160, 928 )
z_index = -11
texture = ExtResource( 2 )

[node name="BlackScreen" type="Node2D" parent="."]
process_priority = 1
z_index = 90

[node name="CanvasLayer" type="CanvasLayer" parent="BlackScreen"]

[node name="ColorRect" type="ColorRect" parent="BlackScreen/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackScreen/CanvasLayer"]
anims/RESET = SubResource( 1 )
anims/fade_to_normal = SubResource( 2 )

[node name="Music1" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -15.0

[node name="Background8" type="Sprite" parent="."]
position = Vector2( 543, 928 )
z_index = -11
texture = ExtResource( 2 )

[node name="Background9" type="Sprite" parent="."]
position = Vector2( 926, 928 )
z_index = -11
texture = ExtResource( 2 )

[node name="Music2" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -15.0

[node name="Music3" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -15.0

[node name="Rage" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -15.0

[node name="MoleDeath" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 10 )

[node name="BuyItemFail" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="Click" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 12 )
volume_db = -10.0

[connection signal="pressed" from="Kanvas/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Kanvas/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Kanvas/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Kanvas/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Kanvas/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Kanvas/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Kanvas/Back" to="." method="_on_Back_pressed"]
